Meta: Remove sentry.
It's completely broken at the moment so let's not even bother with it.

--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -3,9 +3,9 @@ DOMAIN=www.sweetsideofsweden.com
 EDGE_CONFIG="https://edge-config.vercel.com/ecfg_kxjh04qdfa89bvaze5ergwxlvoly?token=a9c0e625-69e1-4ac3-b829-8460a1eda713"
 
 # Store Config
-STORE_LOCALES=en-US,de-DE,sv-SE,en-GB
+STORE_LOCALES=en-US,en-GB,de-DE
 STORE_DEFAULT_LOCALE=en-US
-STORE_CURRENCIES=USD,EUR
+STORE_CURRENCIES=USD,EUR,GBP
 WEBHOOK_REVALIDATE=
 
 # Shopify
