--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
         "turbo": "1.10.16",
         "typescript": "5.2.2"
     },
-    "dependencies": {},
+    "dependencies": {
+        "@nordcom/nordstar": "0.0.9"
+    },
     "packageManager": "npm@10.2.4",
     "nextBundleAnalysis": {
         "budget": 248400,
