--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -77,6 +77,8 @@
         "react-dom": "18.2.0",
         "react-icons": "4.12.0",
         "react-slick": "0.29.0",
+        "react-virtualized-auto-sizer": "1.0.20",
+        "react-window": "1.8.9",
         "sass": "1.69.5",
         "sharp": "0.32.6",
         "styled-components": "6.1.1",
@@ -94,6 +96,8 @@
         "@types/react": "18.2.37",
         "@types/react-dom": "18.2.15",
         "@types/react-slick": "0.23.12",
+        "@types/react-virtualized-auto-sizer": "1.0.3",
+        "@types/react-window": "1.8.8",
         "@types/styled-components": "5.1.30",
         "@typescript-eslint/eslint-plugin": "6.11.0",
         "@vitejs/plugin-react": "4.2.0",
