--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,27 +56,29 @@
     "git.mergeEditor": false,
     "git-graph.graph.colours": ["#ED1E79", "#EDD382", "#274690"],
     "cSpell.words": [
-        "Nordcom",
-        "Filiph",
-        "Siitam",
-        "Sandström",
-        "Sahlin",
         "Albin",
-        "Dahlqvist",
         "Bergsgatan",
+        "Dahlqvist",
         "Deca",
         "destyle",
         "ecommerce",
+        "Filiph",
         "Götaland",
         "HSTS",
         "lastmod",
         "Lexend",
         "Mellerud",
         "nextjs",
+        "Nordcom",
         "prismic",
         "Prismic",
         "prismicio",
-        "Västra"
+        "Sahlin",
+        "Sandström",
+        "Siitam",
+        "sweetsideofsweden",
+        "Västra",
+        "webp"
     ],
     "vscord.enabled": true
 }
