--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "Mellerud",
         "nextjs",
         "Nordcom",
+        "Nordstar",
         "prismic",
         "Prismic",
         "prismicio",
