PageProvider: Refactor to be server-renderable.
This also fixes our `scss` setup and does a bunch more.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "prismic",
         "Prismic",
         "prismicio",
+        "renderable",
         "Sahlin",
         "Sandström",
         "Siitam",
