--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -68,8 +68,8 @@
         "geist": "1.1.0",
         "gravatar.js": "2.0.0",
         "next": "14.0.3",
-        "next-nprogress-bar": "2.1.2",
         "next-seo": "6.4.0",
+        "nextjs-toploader": "1.6.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "4.12.0",
