--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,6 +58,7 @@
     "dependencies": {
         "@apollo/client": "3.8.7",
         "@apollo/experimental-nextjs-app-support": "0.5.1",
+        "@next/third-parties": "14.0.3",
         "@prismicio/client": "7.3.1",
         "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
