--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,6 +60,7 @@
         "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
         "@shopify/hydrogen-react": "2023.10.0",
+        "@vercel/otel": "0.3.0",
         "accept-language-parser": "1.5.0",
         "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
