--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,6 +55,8 @@
     "dependencies": {
         "@apollo/client": "3.8.7",
         "@apollo/experimental-nextjs-app-support": "0.5.1",
+        "@markdoc/markdoc": "0.3.5",
+        "@markdoc/next.js": "0.3.6",
         "@next/third-parties": "14.0.3",
         "@prismicio/client": "7.3.1",
         "@prismicio/next": "1.5.0",
