Middleware+Prismic: Fix `slice-simulator`.

--- a/apps/web/slicemachine.config.json
+++ b/apps/web/slicemachine.config.json
@@ -7,7 +7,7 @@
             "typescript": true
         }
     },
-    "libraries": ["./src/slices/common", "./src/slices/navigation"],
+    "libraries": ["./src/slices/common", "./src/slices/navigation", "./src/slices/product"],
     "localSliceSimulatorURL": "http://localhost:3000/slice-simulator",
     "repositoryName": "candy-by-sweden"
 }
