API: Call some apis in parallel.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,5 +86,12 @@
     "markdownlint.config": {
         "single-title": false,
         "no-inline-html": false
-    }
+    },
+    "javascript.inlayHints.enumMemberValues.enabled": true,
+    "javascript.inlayHints.functionLikeReturnTypes.enabled": true,
+    "javascript.inlayHints.parameterNames.suppressWhenArgumentMatchesName": true,
+    "typescript.inlayHints.enumMemberValues.enabled": true,
+    "typescript.inlayHints.propertyDeclarationTypes.enabled": true,
+    "typescript.inlayHints.variableTypes.enabled": true,
+    "typescript.inlayHints.parameterTypes.enabled": true
 }
