--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dev": "FORCE_COLOR=1 NODE_OPTIONS=\"--no-deprecation\" turbo run dev --color",
         "build": "NODE_OPTIONS=\"--no-deprecation\" turbo run build",
         "lint": "FORCE_COLOR=1 NODE_OPTIONS=\"--no-deprecation\" turbo run lint",
+        "prettier": "FORCE_COLOR=1 NODE_OPTIONS=\"--no-deprecation\" turbo run prettier",
         "typecheck": "NODE_OPTIONS=\"--no-deprecation\" turbo run typecheck",
         "test": "FORCE_COLOR=1 NODE_OPTIONS=\"--no-deprecation\" turbo run test",
         "slicemachine": "NODE_OPTIONS=\"--no-deprecation\" turbo run slicemachine"
