--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
     "files.associations": {
         "**/*.hbs": "plaintext",
         "LICENSE": "plaintext",
-        ".eslintrc": "json",
+        ".eslintrc": "jsonc",
         ".renovaterc": "json"
     },
     "[plaintext]": {
