--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,17 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
+        "predev": "prisma generate",
         "dev": "next dev",
         "dev:turbo": "next dev --turbo",
+        "prebuild": "prisma generate",
         "build": "next build",
         "lint": "next lint",
         "prettier": "prettier src/**/*.* --check",
         "typecheck": "tsc -noEmit",
         "test": "vitest run --coverage",
         "slicemachine": "start-slicemachine",
+        "db": "prisma generate && prisma db push",
         "watch:test": "vitest watch"
     },
     "author": {
@@ -56,18 +59,24 @@
         "@apollo/experimental-nextjs-app-support": "0.5.1",
         "@markdoc/markdoc": "0.3.5",
         "@markdoc/next.js": "0.3.6",
+        "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.0.3",
+        "@prisma/client": "5.6.0",
         "@prismicio/client": "7.3.1",
         "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
         "@shopify/hydrogen-react": "2023.10.0",
+        "@vercel/blob": "0.15.1",
+        "@vercel/kv": "1.0.0",
         "@vercel/otel": "0.3.0",
+        "@vercel/postgres": "0.5.1",
         "accept-language-parser": "1.5.0",
         "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
         "geist": "1.1.0",
         "gravatar.js": "2.0.0",
         "next": "14.0.3",
+        "next-auth": "4.24.5",
         "next-seo": "6.4.0",
         "next-sitemap": "4.2.3",
         "nextjs-toploader": "1.6.4",
@@ -77,7 +86,8 @@
         "sass": "1.69.5",
         "sharp": "0.32.6",
         "styled-components": "6.1.1",
-        "swr": "2.2.4"
+        "swr": "2.2.4",
+        "use-debounce": "10.0.0"
     },
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
