--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "eslint-plugin-unused-imports": "3.0.0",
         "gzip-size": "7.0.0",
         "prettier": "3.1.0",
+        "prisma": "5.6.0",
         "turbo": "1.10.16",
         "typescript": "5.3.2"
     },
