--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -85,6 +85,7 @@
         "react-icons": "4.12.0",
         "sass": "1.69.5",
         "sharp": "0.32.6",
+        "sonner": "1.2.3",
         "styled-components": "6.1.1",
         "swr": "2.2.4",
         "use-debounce": "10.0.0"
