--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "prettier": "FORCE_COLOR=1 NODE_OPTIONS=\"--no-deprecation\" turbo run prettier",
         "typecheck": "NODE_OPTIONS=\"--no-deprecation\" turbo run typecheck",
         "test": "FORCE_COLOR=1 NODE_OPTIONS=\"--no-deprecation\" turbo run test",
-        "db": "FORCE_COLOR=1 NODE_OPTIONS=\"--no-deprecation\" turbo run db",
+        "db:migrate": "prisma migrate deploy",
+        "db:generate": "prisma generate && prisma db push",
         "slicemachine": "NODE_OPTIONS=\"--no-deprecation\" turbo run slicemachine"
     },
     "author": {
