--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -22,7 +22,7 @@ PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv
 
 # Auth
 NEXTAUTH_URL=http://shops.nordcom.io.localhost:3000
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=do-not-use-in-production-or-you-will-be-fired
 
 # SEO & Analytics
 GTM=
