--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -73,7 +73,9 @@
         "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
         "geist": "1.1.0",
+        "glob": "10.3.10",
         "gravatar.js": "2.0.0",
+        "gray-matter": "4.0.3",
         "next": "14.0.3",
         "next-auth": "4.24.5",
         "next-seo": "6.4.0",
