Admin: Add missing links.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "Sandström",
         "Siitam",
         "slicemachine",
+        "sonner",
         "sweetsideofsweden",
         "typecheck",
         "Västra",
