API: Fallback for cloudflare images.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,9 +71,11 @@
         "Lexend",
         "markdoc",
         "Mellerud",
+        "metafield",
         "nextjs",
         "Nordcom",
         "Nordstar",
+        "Preloadable",
         "prismic",
         "Prismic",
         "prismicio",
