--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
         "slicemachine",
         "sonner",
         "sweetsideofsweden",
+        "thirdparties",
         "typecheck",
         "Västra",
         "webp"
