Header+Cart+Footer: Improve layouts and styling.
This also fixes a few logic issues and improves the automatic `light` /
`dark` color generation from the base accent color(s). (TODO: This
should be configurable).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
         "Albin",
         "autofocus",
         "Bergsgatan",
+        "colord",
         "Dahlqvist",
         "Deca",
         "destyle",
