--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -70,6 +70,7 @@
         "@vercel/otel": "0.3.0",
         "@vercel/postgres": "0.5.1",
         "accept-language-parser": "1.5.0",
+        "colord": "2.9.3",
         "convert-units": "2.3.4",
         "destyle.css": "4.0.0",
         "geist": "1.2.0",
