Meta: Update vscode preferences.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,5 +117,8 @@
     },
     "[markdown]": {
         "editor.formatOnType": true
-    }
+    },
+    "prettier.singleQuote": true,
+    "prettier.tabWidth": 4,
+    "prettier.requireConfig": true
 }
