Trackable: Refactor trackable to use the react Context API.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "markdoc",
         "Mellerud",
         "metafield",
+        "myshopify",
         "nextjs",
         "Nordcom",
         "Nordstar",
