--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
         "jsx-a11y/anchor-is-valid": "off",
         "jsx-a11y/html-has-lang": "off",
         "jsx-a11y/no-autofocus": "off",
-        "no-console": ["error", { "allow": ["log", "warn", "error"] }], // TODO: Proper logger.
+        "no-console": ["error", { "allow": ["log", "warn", "error", "debug"] }], // TODO: Proper logger.
         "no-mixed-operators": "off",
         "no-unused-vars": "off",
         "no-useless-constructor": "off",
