Deps: Add highlight analytics.

--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -26,3 +26,5 @@ NEXTAUTH_SECRET=do-not-use-in-production-or-you-will-be-fired
 
 # SEO & Analytics
 GTM=
+NEXT_PUBLIC_HIGHLIGHT_PROJECT_ID=jd4xz39g
+HIGHLIGHT_SOURCEMAP_UPLOAD_API_KEY=cktagos6vfntoap99ok0
