--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "dependencies": {
         "@apollo/client": "3.8.8",
         "@apollo/experimental-nextjs-app-support": "0.5.2",
+        "@highlight-run/next": "7.2.5",
         "@markdoc/markdoc": "0.4.0",
         "@markdoc/next.js": "0.3.6",
         "@next-auth/prisma-adapter": "1.0.7",
@@ -70,6 +71,7 @@
         "@vercel/kv": "1.0.0",
         "@vercel/otel": "0.3.0",
         "@vercel/postgres": "0.5.1",
+        "@vercel/speed-insights": "1.0.0",
         "accept-language-parser": "1.5.0",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
