--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -67,7 +67,6 @@
         "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
         "@shopify/hydrogen-react": "2023.10.1",
-        "@vercel/blob": "0.15.1",
         "@vercel/kv": "1.0.0",
         "@vercel/otel": "0.3.0",
         "@vercel/postgres": "0.5.1",
@@ -96,9 +95,9 @@
         "use-debounce": "10.0.0"
     },
     "devDependencies": {
+        "@happy-dom/global-registrator": "12.10.3",
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.28",
-        "@testing-library/jest-dom": "6.1.5",
         "@testing-library/react": "14.1.2",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
@@ -121,8 +120,8 @@
         "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-unused-imports": "3.0.0",
         "graphql": "16.8.1",
+        "happy-dom": "12.10.3",
         "husky": "8.0.3",
-        "jsdom": "23.0.1",
         "lint-staged": "15.2.0",
         "prettier": "3.0.3",
         "server-only": "0.0.1",
