--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -34,7 +34,7 @@
             "#/styles/*": ["src/app/(admin)/_scss/*"]
         }
     },
-    "exclude": ["node_modules"],
+    "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx"],
     "include": [
         "next-env.d.ts",
         ".next/types/**/*.ts",
