Admin: Add admin routes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,10 +17,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.renderWhitespace": "all",
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true,
-        "source.fixAll.prettier": true,
-        "source.organizeImports": true,
-        "source.sortMembers": true
+        "source.fixAll.eslint": "explicit",
+        "source.fixAll.prettier": "explicit",
+        "source.organizeImports": "explicit",
+        "source.sortMembers": "explicit"
     },
     "files.associations": {
         "**/*.hbs": "plaintext",
