--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,6 @@
         "prebuild": "prisma generate --schema=../../prisma/schema.prisma",
         "build": "next build",
         "lint": "next lint",
-        "prettier": "prettier src/**/*.* --check",
         "typecheck": "tsc -noEmit",
         "test": "vitest run --coverage",
         "slicemachine": "start-slicemachine",
@@ -95,38 +94,16 @@
         "use-debounce": "10.0.0"
     },
     "devDependencies": {
-        "@happy-dom/global-registrator": "12.10.3",
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.28",
-        "@testing-library/react": "14.1.2",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
-        "@types/node": "20.8.10",
-        "@types/react": "18.2.42",
-        "@types/react-dom": "18.2.17",
         "@types/styled-components": "5.1.34",
-        "@typescript-eslint/eslint-plugin": "6.13.2",
-        "@vitejs/plugin-react": "4.2.1",
-        "@vitest/coverage-v8": "1.0.2",
-        "babel-plugin-module-resolver": "5.0.0",
-        "concurrently": "8.2.2",
         "critters": "0.0.20",
         "eslint": "8.55.0",
         "eslint-config-next": "14.0.4",
-        "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-import": "2.29.0",
-        "eslint-plugin-jsdoc": "46.9.0",
-        "eslint-plugin-jsx-a11y": "6.8.0",
-        "eslint-plugin-prettier": "5.0.1",
-        "eslint-plugin-unused-imports": "3.0.0",
         "graphql": "16.8.1",
-        "happy-dom": "12.10.3",
-        "husky": "8.0.3",
-        "lint-staged": "15.2.0",
-        "prettier": "3.0.3",
         "server-only": "0.0.1",
-        "slice-machine-ui": "1.21.2",
-        "typescript": "5.3.3",
-        "vitest": "1.0.2"
+        "slice-machine-ui": "1.21.2"
     }
 }
