--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "build:vercel": "prisma migrate deploy",
         "build": "turbo run build",
         "lint": "turbo run lint",
-        "prettier": "turbo run prettier",
+        "todo:lint:all": "eslint ./{apps,packages}/**/src/**/*.{ts,js,tsx} --no-error-on-unmatched-pattern",
+        "prettier": "prettier **/src/**/*.{ts,tsx,js} --check",
         "typecheck": "turbo run typecheck",
         "test": "turbo run test",
         "slicemachine": "turbo run slicemachine"
@@ -59,23 +60,35 @@
         "apps/*"
     ],
     "devDependencies": {
+        "@happy-dom/global-registrator": "12.10.3",
         "@nordcom/prettier": "0.1.1",
+        "@testing-library/react": "14.1.2",
+        "@types/react": "18.2.42",
+        "@types/react-dom": "18.2.17",
         "@typescript-eslint/eslint-plugin": "6.13.2",
+        "@typescript-eslint/parser": "6.13.2",
+        "@vitejs/plugin-react": "4.2.1",
+        "@vitest/coverage-v8": "1.0.2",
         "babel-plugin-module-resolver": "5.0.0",
         "concurrently": "8.2.2",
         "eslint": "8.55.0",
-        "eslint-config-next": "14.0.4",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-import": "2.29.0",
         "eslint-plugin-jsdoc": "46.9.0",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-prettier": "5.0.1",
+        "eslint-plugin-react": "7.33.2",
+        "eslint-plugin-react-hooks": "4.6.0",
         "eslint-plugin-unused-imports": "3.0.0",
         "gzip-size": "7.0.0",
+        "happy-dom": "12.10.3",
+        "husky": "8.0.3",
+        "lint-staged": "15.2.0",
         "prettier": "3.1.0",
         "prisma": "5.7.0",
         "turbo": "1.11.1",
-        "typescript": "5.3.3"
+        "typescript": "5.3.3",
+        "vitest": "1.0.2"
     },
     "packageManager": "npm@10.2.5",
     "nextBundleAnalysis": {
