--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,7 +60,7 @@
         "@markdoc/next.js": "0.3.6",
         "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.0.4",
-        "@nordcom/nordstar": "0.0.19",
+        "@nordcom/nordstar": "0.0.21",
         "@prisma/client": "5.7.0",
         "@prismicio/client": "7.3.1",
         "@prismicio/next": "1.5.0",
@@ -90,8 +90,7 @@
         "sharp": "0.33.0",
         "sonner": "1.2.4",
         "styled-components": "6.1.1",
-        "swr": "2.2.4",
-        "use-debounce": "10.0.0"
+        "swr": "2.2.4"
     },
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
