Logging: Add `highlight.io` to legacy site.

--- a/.env.production
+++ b/.env.production
@@ -1,14 +1,28 @@
-I18NEXT_DEFAULT_CONFIG_PATH=./next-i18next.config.cjs
+# General Config
 DOMAIN=www.sweetsideofsweden.com
+EDGE_CONFIG="https://edge-config.vercel.com/ecfg_kxjh04qdfa89bvaze5ergwxlvoly?token=a9c0e625-69e1-4ac3-b829-8460a1eda713"
+
+# Store Config
+STORE_LOCALES=en-US,en-GB,de-DE
+STORE_DEFAULT_LOCALE=en-US
+STORE_CURRENCIES=USD,EUR,GBP
+WEBHOOK_REVALIDATE=AB5stBgmqQ4jkRvG2hOY2Ut-3ZV2UkN5Wg
+
+# Shopify
 SHOPIFY_SHOP_ID=76188483889
 SHOPIFY_STOREFRONT_ID=2130225
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
-SHOPIFY_CHECKOUT_DOMAIN=checkout.sweetsideofsweden.com
-SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
+SHOPIFY_CHECKOUT_DOMAIN=sweet-side-of-sweden.myshopify.com
+#checkout.sweetsideofsweden.com
+SHOPIFY_TOKEN=ed5a3ae2257a954f7f007fcaed2f022f
+SHOPIFY_PRIVATE_TOKEN=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
+
+# Prismic
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
 PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv73vv70TYO-_vXfvv71t77-9O--_vRzvv73vv71e77-9cw
-STORE_LOCALES=en-US,en-GB,de-DE
-STORE_DEFAULT_LOCALE=en-US
-STORE_CURRENCIES=USD,EUR
+
+# Auth
+NEXTAUTH_URL=https://shops.nordcom.io
+
+# SEO & Analytics
 GTM=GTM-KGVH3RX
-WEBHOOK_REVALIDATE=AB5stBgmqQ4jkRvG2hOY2Ut-3ZV2UkN5Wg
