--- a/package.json
+++ b/package.json
@@ -59,19 +59,21 @@
         "supports css-grid"
     ],
     "dependencies": {
-        "@apollo/client": "3.8.7",
+        "@apollo/client": "3.8.8",
+        "@highlight-run/next": "7.2.5",
         "@prismicio/client": "7.3.1",
-        "@prismicio/next": "1.4.0",
+        "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
-        "@shopify/hydrogen-react": "2023.10.0",
+        "@shopify/hydrogen-react": "2023.10.1",
         "@sweetsideofsweden/next-plugin-preval": "3.0.0",
         "@thebeyondgroup/shopify-rich-text-renderer": "1.0.0",
         "accept-language-parser": "1.5.0",
         "color": "4.2.3",
         "convert-units": "2.3.4",
+        "critters": "0.0.20",
         "destyle.css": "4.0.0",
         "i18next": "23.6.0",
-        "next": "14.0.2",
+        "next": "14.0.4",
         "next-i18next": "14.0.3",
         "next-seo": "6.4.0",
         "nprogress": "0.2.0",
@@ -86,7 +88,7 @@
     },
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
-        "@slicemachine/adapter-next": "0.3.23",
+        "@slicemachine/adapter-next": "0.3.28",
         "@types/accept-language-parser": "1.5.5",
         "@types/color": "3.0.5",
         "@types/convert-units": "2.3.8",
@@ -108,10 +110,10 @@
         "lint-staged": "15.0.2",
         "next-sitemap": "4.2.3",
         "npm-run-all": "4.1.5",
-        "prettier": "3.0.3",
+        "prettier": "3.1.0",
         "pretty-xml": "1.2.1",
-        "slice-machine-ui": "1.19.1",
-        "typescript": "5.2.2"
+        "slice-machine-ui": "1.21.2",
+        "typescript": "5.3.3"
     },
     "nextBundleAnalysis": {
         "budget": 248400,
