Cart: Attempt at fixing the Shopify cart.

--- a/.env.production
+++ b/.env.production
@@ -12,9 +12,8 @@ WEBHOOK_REVALIDATE=AB5stBgmqQ4jkRvG2hOY2Ut-3ZV2UkN5Wg
 SHOPIFY_SHOP_ID=76188483889
 SHOPIFY_STOREFRONT_ID=2130225
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
-SHOPIFY_CHECKOUT_DOMAIN=sweet-side-of-sweden.myshopify.com
-#checkout.sweetsideofsweden.com
-SHOPIFY_TOKEN=ed5a3ae2257a954f7f007fcaed2f022f
+SHOPIFY_CHECKOUT_DOMAIN=checkout.sweetsideofsweden.com
+SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
 SHOPIFY_PRIVATE_TOKEN=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
 
 # Prismic
