--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -40,8 +40,6 @@
         "prismicio-types.d.ts",
         "prismicio.ts",
         "src/@types",
-        "src/**/*.ts",
-        "src/**/*.tsx",
-        "src/**/*.json"
+        "src"
     ]
 }
