--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
         "build:vercel": "prisma migrate deploy",
         "build": "turbo run build",
         "lint": "turbo run lint",
-        "todo:lint:all": "eslint ./{apps,packages}/**/src/**/*.{ts,js,tsx} --no-error-on-unmatched-pattern",
-        "prettier": "prettier **/src/**/*.{ts,tsx,js} --check",
-        "fix:prettier": "prettier **/src/**/*.{ts,tsx,js} --write",
+        "todo:lint:all": "eslint ./{apps,packages}/**/src/**/*.{ts,tsx} --no-error-on-unmatched-pattern",
+        "prettier": "prettier **/src/**/*.{ts,tsx,scss} --check",
+        "fix:prettier": "prettier **/src/**/*.{ts,tsx,scss} --write",
         "typecheck": "turbo run typecheck",
         "test": "turbo run test",
         "slicemachine": "turbo run slicemachine"
