Analytics: Fix highlight source map uploading.

--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -22,3 +22,4 @@ PRISMIC_TOKEN=MC5aTHhyYmhJQUFDWUE0V09B.77-9F--_ve-_vWsB77-977-9BWfvv73vv70mFQfvv
 
 # SEO & Analytics
 GTM=GTM-KGVH3RX
+HIGHLIGHT_SOURCEMAP_UPLOAD_API_KEY=cktagos6vfntoap99ok0
