--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "react-icons": "4.11.0",
         "sass": "1.69.5",
         "sharp": "0.32.6",
+        "sonner": "1.2.4",
         "styled-components": "6.1.0",
         "swr": "2.2.4"
     },
