Admin: Improve design.

--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -2,6 +2,9 @@
 DOMAIN=www.sweetsideofsweden.com
 EDGE_CONFIG="https://edge-config.vercel.com/ecfg_kxjh04qdfa89bvaze5ergwxlvoly?token=a9c0e625-69e1-4ac3-b829-8460a1eda713"
 
+# Auth
+AUTH_TRUST_HOST=true # See https://github.com/nextauthjs/next-auth/issues/600#issuecomment-1784736042
+
 # Store Config
 STORE_LOCALES=en-US,en-GB,de-DE
 STORE_DEFAULT_LOCALE=en-US
