Analytics: Add support for `<VercelAnalytics />`.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,7 @@
         "thirdparties",
         "typecheck",
         "Västra",
+        "Vercel",
         "webp"
     ],
     "markdownlint.config": {
