--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,6 +66,7 @@
         "@prismicio/next": "1.5.0",
         "@prismicio/react": "2.7.3",
         "@shopify/hydrogen-react": "2023.10.1",
+        "@vercel/analytics": "1.1.1",
         "@vercel/kv": "1.0.1",
         "@vercel/otel": "0.3.0",
         "@vercel/postgres": "0.5.1",
@@ -78,14 +79,14 @@
         "glob": "10.3.10",
         "gravatar.js": "2.0.0",
         "gray-matter": "4.0.3",
+        "next": "14.0.4",
         "next-auth": "4.24.5",
         "next-seo": "6.4.0",
         "next-sitemap": "4.2.3",
-        "next": "14.0.4",
         "nextjs-toploader": "1.6.4",
+        "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "4.12.0",
-        "react": "18.2.0",
         "sass": "1.69.5",
         "sharp": "0.33.0",
         "sonner": "1.2.4",
@@ -99,8 +100,8 @@
         "@types/convert-units": "2.3.9",
         "@types/styled-components": "5.1.34",
         "critters": "0.0.20",
-        "eslint-config-next": "14.0.4",
         "eslint": "8.55.0",
+        "eslint-config-next": "14.0.4",
         "graphql": "16.8.1",
         "server-only": "0.0.1",
         "slice-machine-ui": "1.21.2"
