--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -87,6 +87,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "4.12.0",
+        "react-use-intercom": "5.1.4",
         "sass": "1.69.5",
         "sharp": "0.33.0",
         "sonner": "1.2.4",
