--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
         "@apollo/client": "3.8.8",
         "@apollo/experimental-nextjs-app-support": "0.5.2",
         "@highlight-run/next": "7.2.5",
+        "@lottiefiles/react-lottie-player": "3.5.3",
         "@markdoc/markdoc": "0.4.0",
         "@markdoc/next.js": "0.3.6",
         "@next-auth/prisma-adapter": "1.0.7",
