--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,7 +56,6 @@
         "@apollo/client": "3.8.8",
         "@apollo/experimental-nextjs-app-support": "0.5.2",
         "@highlight-run/next": "7.2.5",
-        "@lottiefiles/react-lottie-player": "3.5.3",
         "@markdoc/markdoc": "0.4.0",
         "@markdoc/next.js": "0.3.6",
         "@next-auth/prisma-adapter": "1.0.7",
@@ -88,6 +87,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "4.12.0",
+        "react-lottie-player": "1.5.5",
         "react-use-intercom": "5.1.4",
         "sass": "1.69.5",
         "sharp": "0.33.0",
