--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "nextjs",
         "Nordcom",
         "Nordstar",
+        "nums",
         "Preloadable",
         "prismic",
         "Prismic",
