--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "destyle",
         "ecommerce",
         "Filiph",
+        "filiphsandstrom",
         "Götaland",
         "HSTS",
         "lastmod",
