Build: Remove unused `css`/`scss`.

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,12 @@
         "import/first": "off",
         "import/order": "off",
         "indent": "off",
+        "jsdoc/check-alignment": "error",
+        "jsdoc/check-indentation": "off",
+        "jsdoc/check-line-alignment": "error",
+        "jsdoc/check-param-names": "error",
+        "jsdoc/check-property-names": "error",
+        "jsdoc/check-syntax": "error",
         "jsdoc/check-types": "error",
         "jsdoc/require-hyphen-before-param-description": "error",
         "jsx-a11y/alt-text": "off",
