--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,7 @@
         "ecommerce",
         "Filiph",
         "filiphsandstrom",
+        "googlebot",
         "Götaland",
         "HSTS",
         "lastmod",
