--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -105,6 +105,7 @@
         "eslint": "8.56.0",
         "eslint-config-next": "14.0.4",
         "graphql": "16.8.1",
+        "@filiphsandstrom/next-purge-css-modules": "0.0.0-unstable.1",
         "server-only": "0.0.1",
         "slice-machine-ui": "1.22.1"
     }
