Storefront: Improve compatibility with Safari.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,6 @@
         "colord",
         "Dahlqvist",
         "Deca",
-        "destyle",
         "ecommerce",
         "Filiph",
         "filiphsandstrom",
@@ -72,6 +71,7 @@
         "markdoc",
         "Mellerud",
         "metafield",
+        "metafields",
         "myshopify",
         "nextjs",
         "Nordcom",
@@ -87,6 +87,7 @@
         "Siitam",
         "slicemachine",
         "sonner",
+        "Subframes",
         "sweetsideofsweden",
         "thirdparties",
         "typecheck",
