Admin: Add a new `progress report`.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,7 @@
         "Subframes",
         "sweetsideofsweden",
         "thirdparties",
+        "timeframes",
         "typecheck",
         "Västra",
         "Vercel",
